# myNotifier

./: hello.py  main.py  makefile  pyproject.toml  readme.md  slack_bot.py  wsgi.py
docker/: DockerFile  Dockerfile  build.sh  docker-compose.yaml  slack-bot.nginx.conf
notifier/: __init__.py  app.py  config.py  earth_bot.py  extensions.py  models.py  wsgi.py
notifier/lib/: exceptions.py
notifier/lib/ride/: frider.py
notifier/lib/slack/: client.py  rich_text.py
notifier/ride/: frider.py
notifier/static/: earth.css  earth.js
notifier/template/: earth.html
scripts/: earth_bot.py  wsgi.py
